# Meson

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Meson.sln  Preprocessor.h  README.md  xmake.lua
Compiler/: AssemblyTransform.cs  CompilationUnitSyntaxNodeTransform.cs  CompilationUnitTransform.cs  Compiler.csproj  CppRenderer.cs  Meson.Compiler.sln  MethodTransform.cs  Program.cs  SyntaxGenerator.cs  TypeDefinitionTransform.cs  Utils.cs
Compiler/Ast/: CppCompilationUnitSyntax.cs  CppStatementSyntax.cs  CppSyntaxNode.cs
Compiler/CppAst/: CompilationUnitSyntax.cs  ExpressionSyntax.cs  IdentifierSyntax.cs  StatementSyntax.cs  SyntaxNode.cs
Test/: Program.cs  Test.csproj
outcpp/: CMakeLists.txt  copy_rt.bat  outcpp.cpp
rt/: GCObject.cpp  GCObject.h  gc_object.hpp  object.hpp  rt.vcxproj  rt.vcxproj.filters
runtime/: CMakeLists.txt  xmake.lua
runtime/boost/: readme.txt
runtime/outcpp/: CMakeLists.txt  cxxsha1.lua  test.cpp  xmake.lua
runtime/outcpp/System.Console/: Interop-dep.h  Interop.cpp  Interop.h
runtime/outcpp/System.Console/System/: SR.h  (+20 more)
runtime/outcpp/System.Private.CoreLib/: Interop-dep.h  Interop.cpp  Interop.h  _PrivateImplementationDetails_-dep.h  _PrivateImplementationDetails_.cpp  _PrivateImplementationDetails_.h
runtime/outcpp/System.Private.Uri/: _PrivateImplementationDetails_-dep.h  _PrivateImplementationDetails_.cpp  _PrivateImplementationDetails_.h
runtime/rt/: GCObject.cpp  GCObject.h  Preprocessor.h
runtime/test/: CMakeLists.txt  runtime.cpp  runtime.h  test.cpp  test.h  xmake.lua
test/: test.cpp  test.vcxproj
(+4307 files in other folders)
